--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.ignoreWords": [
         "URLROOT"
-    ]
+    ],
+    "files.watcherExclude": {
+        "**/target": true
+    }
 }
